--- a/exam_project/templates/courses/course_detail.html
+++ b/exam_project/templates/courses/course_detail.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}{{ course.title }}{% endblock %}
+{% block title %}
+    {{ course.title }}
+{% endblock %}
 
 {% block content %}
 <h1>{{ course.title }}</h1>
-
-{% if course.logo %}
-    <img src="{{ course.logo.url }}" width="200">
-{% endif %}
 
 <p>{{ course.description }}</p>
 <p>
@@ -28,7 +26,7 @@
 <h2>Уроки</h2>
 
 {% if user.is_authenticated %}
-    <a class="btn" href="{% url 'lesson_create' course.id %}">➕ Добавить урок</a>
+    <a class="btn" href="{% url 'lesson_create' course.id %}">Добавить урок</a>
 {% endif %}
 
 <ul>
