--- a/exam_project/templates/courses/course_list.html
+++ b/exam_project/templates/courses/course_list.html
@@ -12,7 +12,7 @@
 <br>
 
 {% if user.is_authenticated %}
-    <a class="btn" href="{% url 'course_create' %}">➕ Создать курс</a>
+    <a class="btn" href="{% url 'course_create' %}">Создать курс</a>
 {% endif %}
 
 <hr>
